changed some layout issues with other page

--- a/style2.css
+++ b/style2.css
@@ -169,6 +169,7 @@ ul.tabs > li:after {
   .content.show {
     display: inline-block;
     vertical-align: top;
+    margin-left: 50;
   }
 
   .text {
@@ -232,6 +233,7 @@ ul.tabs > li:after {
   .content.show {
     display: inline-block;
     vertical-align: top;
+    margin-left: 50;
   }
 
   .text {
